compiler/src/test/resources/amyc/parser/failing/FunDefError2.amy
module FunDef
  fn foo(i: Int) = { 42 }
end FunDef
